--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,17 @@
 version: '3'
 
 services:
+  client-tests:
+    image: golang:1.20.1-alpine3.17
+    restart: "no"
+    depends_on:
+      - accountapi
+    command: sh -c "pwd && go version && go test"
+    volumes:
+      - .:/app
+    working_dir: /app
+    environment:
+      - ACCOUNTS_SERVICE_BASE_URL=http://accountapi:8080
   accountapi:
     image: form3tech/interview-accountapi:v1.0.0-46-gb3b6c766
     restart: on-failure
@@ -20,7 +31,13 @@ services:
       - DATABASE-USERNAME=interview_accountapi_user
       - DATABASE-PASSWORD=123
     ports:
-      - 8080:8080
+      - "8080:8080"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080"]
+      interval: 60s
+      retries: 5
+      timeout: 10s
+      start_period: 20s
   postgresql:
     image: postgres:9.5-alpine
     healthcheck:
